# Chessodex

./: .gitmodules  CMakeLists.txt  README.org  build.py
assets/: imgui.ini
src/: ChessodexApp.h  CommonDef.h  main.cpp
src/Game/: GameLayer.cpp  GameLayer.h
src/Game/Scripts/: Pawn.cpp  Pawn.h  SceneManager.cpp  SceneManager.h
src/Game/UI/: GameUI.h
